hard-gists/7a41da7aabb8455d0898db362335e139/run.log
=== Docker Run Log for 7a41da7aabb8455d0898db362335e139 ===
Started at: Mi 29. Okt 17:26:25 CET 2025

[2025-10-29 17:26:26] START: Running container for 7a41da7aabb8455d0898db362335e139
[2025-10-29 17:26:26] SUCCESS: Container 681fa88732104665ec2f9f3af54db1e82fb751326530c87c5bfed3db9b21650e started for 7a41da7aabb8455d0898db362335e139
=== Container logs for 7a41da7aabb8455d0898db362335e139 ===
  File "/snippet.py", line 172
    print "[+] Connecting to {}".format(remoteName)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7a41da7aabb8455d0898db362335e139 ===
[2025-10-29 17:26:28] INFO: Container 681fa88732104665ec2f9f3af54db1e82fb751326530c87c5bfed3db9b21650e has stopped
